# wasm_tanchishe

./: Cargo.toml  index.html  index.js  style.css
src/: lib.rs  world.rs
src/world/: color.rs  coord.rs  screen.rs
