[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# 省去不相关的默认配置

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ImageData',
]

